# camera_lidar_fusion

./: README.md
src/camera_lidar_fusion/: CMakeLists.txt  README.md  package.xml
src/camera_lidar_fusion/data/parameters/: extrinsic.txt  intrinsic.txt
src/camera_lidar_fusion/launch/: colored_cloud.rviz  fusion.launch
src/camera_lidar_fusion/src/: fusion.cpp
